Update OptionsMenu_GraphicWindow.java
Atualizada classe para que a mesma possa alterar escala e volume. Volume é alterado em tempo real, enquanto escala é alterada apenas após atualização da aba